--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "jsdom": "^22.1.0",
+    "mathquill": "^0.10.1-a",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1"
   }
